--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/NgTyKnLp/logo-design.png" alt="logo-design" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MGF - Mt. Gox Funds | Solana Memecoin</title>
-    <meta name="description" content="MGF - The legendary Mt. Gox exchange hack reborn as a Solana memecoin. Join the revolution!">
-  </head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Title and Description -->
+  <title>MGF Coin | Mt. GoxF Meme Token on Solana</title>
+  <meta name="description" content="MGF Coin - The legendary Mt. Gox reborn as a Solana meme token. Join the next viral crypto movement powered by memes and blockchain tech.">
+  <meta name="keywords" content="MGF, Solana meme coin, Mt. Gox token, MGF crypto, Solana crypto, MGF airdrop, buy MGF, best memecoins, new crypto 2025">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="https://i.ibb.co/NgTyKnLp/logo-design.png" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://mtgoxf.com/" />
+
+  <!-- Open Graph Meta (for Facebook, Discord) -->
+  <meta property="og:title" content="MGF Coin | Solana Meme Token" />
+  <meta property="og:description" content="Join MGF - the Mt. Gox meme revival on Solana. Viral, fun, and powered by the community." />
+  <meta property="og:image" content="https://i.ibb.co/NgTyKnLp/logo-design.png" />
+  <meta property="og:url" content="https://mtgoxf.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card Meta -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="MGF Coin | Mt. Gox Meme Token on Solana" />
+  <meta name="twitter:description" content="MGF Coin is the ultimate memecoin tribute to Mt. Gox on Solana." />
+  <meta name="twitter:image" content="https://i.ibb.co/NgTyKnLp/logo-design.png" />
+  <meta name="twitter:site" content="@your_twitter_handle" /> <!-- Replace with your Twitter handle -->
+
+  <!-- Structured Data (Organization Logo for Google) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "MGF Coin",
+    "url": "https://mtgoxf.com/",
+    "logo": "https://i.ibb.co/NgTyKnLp/logo-design.png"
+  }
+  </script>
+</head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
