--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta name="twitter:title" content="MGF Coin | Mt. Gox Meme Token on Solana" />
   <meta name="twitter:description" content="MGF Coin is the ultimate memecoin tribute to Mt. Gox on Solana." />
   <meta name="twitter:image" content="https://i.ibb.co/NgTyKnLp/logo-design.png" />
-  <meta name="twitter:site" content="@your_twitter_handle" /> <!-- Replace with your Twitter handle -->
+  <meta name="twitter:site" content="@MtGoxf" /> <!-- Replace with your Twitter handle -->
 
   <!-- Structured Data (Organization Logo for Google) -->
   <script type="application/ld+json">
