--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="MGF, Solana meme coin, Mt. Gox token, MGF crypto, Solana crypto, MGF airdrop, buy MGF, best memecoins, new crypto 2025">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://i.ibb.co/NgTyKnLp/logo-design.png" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://mtgoxf.com/" />
